--- a/src/AspectCore.Lite.Container.Autofac/project.json
+++ b/src/AspectCore.Lite.Container.Autofac/project.json
@@ -1,8 +1,8 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
-    "Autofac": "4.0.1",
-    "AspectCore.Lite.Abstractions.Resolution": "1.0.0-beta5-12266"
+    "AspectCore.Lite.Abstractions.Resolution": "1.0.0-beta5-13070",
+    "Autofac": "4.0.1"
   },
   "description": "Interceptor and dynamicProxy support for Autofac via AspectCore Lite",
   "frameworks": {
@@ -27,5 +27,5 @@
   },
   "projectUrl": "https://github.com/AspectCore/Lite.Container",
   "title": "AspectCore.Lite.Container.Autofac",
-  "version": "1.0.0-beta5-12266"
+  "version": "1.0.0-beta5-13070"
 }
