--- a/src/AspectCore.Container.DependencyInjection/project.json
+++ b/src/AspectCore.Container.DependencyInjection/project.json
@@ -1,18 +1,13 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
-    "AspectCore.Abstractions.Resolution": "1.1.0-rc1-13176",
+    "AspectCore.Abstractions.Resolution": "1.1.0-rc1-13180",
     "Microsoft.Extensions.DependencyInjection": "1.1.0"
   },
   "description": "Interceptor and dynamicProxy support for Microsoft.Extensions.DependencyInjection via AspectCore Framework.",
   "frameworks": {
-    "netstandard1.6": {
-      "dependencies": {
-        "NETStandard.Library": "1.6.1",
-        "System.ComponentModel": "4.3.0"
-      }
-    },
-    "net451": {}
+    "netstandard1.6": {},
+    "net45": {}
   },
   "packOptions": {
     "iconUrl": "https://avatars1.githubusercontent.com/u/19426425?v=3&s=200",
@@ -27,5 +22,5 @@
   },
   "projectUrl": "https://github.com/AspectCore/Container",
   "title": "AspectCore.Container.DependencyInjection",
-  "version": "1.1.0-rc1-13176"
+  "version": "1.1.0-rc1-13180"
 }
