--- a/src/AspectCore.Extensions.DependencyInjection/project.json
+++ b/src/AspectCore.Extensions.DependencyInjection/project.json
@@ -1,7 +1,7 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
-    "AspectCore.Abstractions": "1.1.0-rc1-13250",
+    "AspectCore.Core": "1.1.0-rc1-13272",
     "Microsoft.Extensions.DependencyInjection": "1.1.0"
   },
   "description": "Interceptor and dynamicProxy support for Microsoft.Extensions.DependencyInjection via AspectCore Framework.",
