--- a/src/AspectCore.Extensions.DependencyInjection/project.json
+++ b/src/AspectCore.Extensions.DependencyInjection/project.json
@@ -1,7 +1,7 @@
 {
   "authors": [ "liuhaoyang" ],
   "dependencies": {
-    "AspectCore.Core": "1.1.0-rc1-13278",
+    "AspectCore.Core": "0.1.0",
     "Microsoft.Extensions.DependencyInjection": "1.1.0"
   },
   "description": "Interceptor and dynamicProxy support for Microsoft.Extensions.DependencyInjection via AspectCore Framework.",
@@ -22,5 +22,5 @@
   },
   "projectUrl": "https://github.com/AspectCore/DependencyInjection",
   "title": "AspectCore.Extensions.DependencyInjection",
-  "version": "1.1.0-rc1-13280"
+  "version": "0.1.0.0"
 }
