--- a/src/AspectCore.Extensions.DependencyInjection/project.json
+++ b/src/AspectCore.Extensions.DependencyInjection/project.json
@@ -1,5 +1,5 @@
 {
-  "authors": [ "liuhaoyang" ],
+  "authors": [ "Lemon" ],
   "dependencies": {
     "AspectCore.Core": "0.1.0",
     "Microsoft.Extensions.DependencyInjection": "1.1.0"
