--- a/src/AspectCore.Extensions.DependencyInjection/project.json
+++ b/src/AspectCore.Extensions.DependencyInjection/project.json
@@ -12,7 +12,7 @@
   "packOptions": {
     "iconUrl": "https://avatars1.githubusercontent.com/u/19426425?v=3&s=200",
     "licenseUrl": "https://mit-license.org/",
-    "owners": [ "liuhaoyang" ],
+    "owners": [ "AspectCoreProject" ],
     "releaseNotes": "Interceptor and dynamicProxy support for Microsoft.Extensions.DependencyInjection via AspectCore Framework.",
     "repository": {
       "type": "git",
